# pycork

./: CMakeLists.txt  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  pythonpublish.yml
cork/mesh/: mesh.isct.tpp
mpir/: CMakeLists.txt
