[build-system]
requires = [
  "scikit-build-core>=0.9",
  "cmake>=3.18",
  "wheel"
]
build-backend = "scikit_build_core.build"

[project]
name = "pycork"
version = "0.1.3"
description = "pycork provides a compiled interface to the cork boolean library"
authors = [{ name="Luke Parry", email="dev@lukeparry.uk" }]
requires-python = ">=3.8"