
include_directories(
    ../external/mpir
)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(Header_Files
    "config.h"
    "../external/mpir/gmp-impl.h"
    "gmp-mparam.h"
    "longlong.h"
    "mpir.h"
)
source_group("Header Files" FILES ${Header_Files})

set(Source_Files
    "../external/mpir/assert.c"
    "../external/mpir/errno.c"
    "../external/mpir/extract-dbl.c"
    "../external/mpir/invalid.c"
    "../external/mpir/memory.c"
    "../external/mpir/mp_bpl.c"
    "../external/mpir/mp_clz_tab.c"
    "../external/mpir/mp_dv_tab.c"
    "../external/mpir/mp_get_fns.c"
    "../external/mpir/mp_minv_tab.c"
    "../external/mpir/mp_set_fns.c"
    "../external/mpir/nextprime.c"
    "../external/mpir/primesieve.c"
    "../external/mpir/randbui.c"
    "../external/mpir/randclr.c"
    "../external/mpir/randdef.c"
    "../external/mpir/randiset.c"
    "../external/mpir/randlc2s.c"
    "../external/mpir/randlc2x.c"
    "../external/mpir/randmt.c"
    "../external/mpir/randmts.c"
    "../external/mpir/randmui.c"
    "../external/mpir/rands.c"
    "../external/mpir/randsd.c"
    "../external/mpir/randsdui.c"
    "../external/mpir/tal-reent.c"
    "../external/mpir/version.c"
)
source_group("Source Files" FILES ${Source_Files})

set(Source_Files__cxx
    "../external/mpir/cxx/dummy.cc"
    "../external/mpir/cxx/isfuns.cc"
    "../external/mpir/cxx/ismpf.cc"
    "../external/mpir/cxx/ismpq.cc"
    "../external/mpir/cxx/ismpz.cc"
    "../external/mpir/cxx/ismpznw.cc"
    "../external/mpir/cxx/osdoprnti.cc"
    "../external/mpir/cxx/osfuns.cc"
    "../external/mpir/cxx/osmpf.cc"
    "../external/mpir/cxx/osmpq.cc"
    "../external/mpir/cxx/osmpz.cc"
)
source_group("Source Files\\cxx" FILES ${Source_Files__cxx})

set(Source_Files__fft
    "../external/mpir/fft/adjust.c"
    "../external/mpir/fft/adjust_sqrt2.c"
    "../external/mpir/fft/butterfly_lshB.c"
    "../external/mpir/fft/butterfly_rshB.c"
    "../external/mpir/fft/combine_bits.c"
    "../external/mpir/fft/div_2expmod_2expp1.c"
    "../external/mpir/fft/fermat_to_mpz.c"
    "../external/mpir/fft/fft_mfa_trunc_sqrt2.c"
    "../external/mpir/fft/fft_mfa_trunc_sqrt2_inner.c"
    "../external/mpir/fft/fft_negacyclic.c"
    "../external/mpir/fft/fft_radix2.c"
    "../external/mpir/fft/fft_trunc.c"
    "../external/mpir/fft/fft_trunc_sqrt2.c"
    "../external/mpir/fft/ifft_mfa_trunc_sqrt2.c"
    "../external/mpir/fft/ifft_negacyclic.c"
    "../external/mpir/fft/ifft_radix2.c"
    "../external/mpir/fft/ifft_trunc.c"
    "../external/mpir/fft/ifft_trunc_sqrt2.c"
    "../external/mpir/fft/mul_2expmod_2expp1.c"
    "../external/mpir/fft/mul_fft_main.c"
    "../external/mpir/fft/mul_mfa_trunc_sqrt2.c"
    "../external/mpir/fft/mul_trunc_sqrt2.c"
    "../external/mpir/fft/mulmod_2expp1.c"
    "../external/mpir/fft/normmod_2expp1.c"
    "../external/mpir/fft/revbin.c"
    "../external/mpir/fft/split_bits.c"
)
source_group("Source Files\\fft" FILES ${Source_Files__fft})

set(Source_Files__mpf
    "../external/mpir/mpf/abs.c"
    "../external/mpir/mpf/add.c"
    "../external/mpir/mpf/add_ui.c"
    "../external/mpir/mpf/ceilfloor.c"
    "../external/mpir/mpf/clear.c"
    "../external/mpir/mpf/clears.c"
    "../external/mpir/mpf/cmp.c"
    "../external/mpir/mpf/cmp_d.c"
    "../external/mpir/mpf/cmp_si.c"
    "../external/mpir/mpf/cmp_ui.c"
    "../external/mpir/mpf/cmp_z.c"
    "../external/mpir/mpf/div.c"
    "../external/mpir/mpf/div_2exp.c"
    "../external/mpir/mpf/div_ui.c"
    "../external/mpir/mpf/dump.c"
    "../external/mpir/mpf/eq.c"
    "../external/mpir/mpf/fits_si.c"
    "../external/mpir/mpf/fits_sint.c"
    "../external/mpir/mpf/fits_slong.c"
    "../external/mpir/mpf/fits_sshort.c"
    "../external/mpir/mpf/fits_ui.c"
    "../external/mpir/mpf/fits_uint.c"
    "../external/mpir/mpf/fits_ulong.c"
    "../external/mpir/mpf/fits_ushort.c"
    "../external/mpir/mpf/get_d.c"
    "../external/mpir/mpf/get_d_2exp.c"
    "../external/mpir/mpf/get_dfl_prec.c"
    "../external/mpir/mpf/get_prc.c"
    "../external/mpir/mpf/get_si.c"
    "../external/mpir/mpf/get_str.c"
    "../external/mpir/mpf/get_ui.c"
    "../external/mpir/mpf/init.c"
    "../external/mpir/mpf/init2.c"
    "../external/mpir/mpf/inits.c"
    "../external/mpir/mpf/inp_str.c"
    "../external/mpir/mpf/int_p.c"
    "../external/mpir/mpf/iset.c"
    "../external/mpir/mpf/iset_d.c"
    "../external/mpir/mpf/iset_si.c"
    "../external/mpir/mpf/iset_str.c"
    "../external/mpir/mpf/iset_ui.c"
    "../external/mpir/mpf/mul.c"
    "../external/mpir/mpf/mul_2exp.c"
    "../external/mpir/mpf/mul_ui.c"
    "../external/mpir/mpf/neg.c"
    "../external/mpir/mpf/out_str.c"
    "../external/mpir/mpf/pow_ui.c"
    "../external/mpir/mpf/random2.c"
    "../external/mpir/mpf/reldiff.c"
    "../external/mpir/mpf/rrandomb.c"
    "../external/mpir/mpf/set.c"
    "../external/mpir/mpf/set_d.c"
    "../external/mpir/mpf/set_dfl_prec.c"
    "../external/mpir/mpf/set_prc.c"
    "../external/mpir/mpf/set_prc_raw.c"
    "../external/mpir/mpf/set_q.c"
    "../external/mpir/mpf/set_si.c"
    "../external/mpir/mpf/set_str.c"
    "../external/mpir/mpf/set_ui.c"
    "../external/mpir/mpf/set_z.c"
    "../external/mpir/mpf/size.c"
    "../external/mpir/mpf/sqrt.c"
    "../external/mpir/mpf/sqrt_ui.c"
    "../external/mpir/mpf/sub.c"
    "../external/mpir/mpf/sub_ui.c"
    "../external/mpir/mpf/swap.c"
    "../external/mpir/mpf/trunc.c"
    "../external/mpir/mpf/ui_div.c"
    "../external/mpir/mpf/ui_sub.c"
    "../external/mpir/mpf/urandomb.c"
)
source_group("Source Files\\mpf" FILES ${Source_Files__mpf})

set(Source_Files__mpn
    "../external/mpir/mpn/generic/add.c"
    "../external/mpir/mpn/generic/add_1.c"
    "../external/mpir/mpn/generic/add_err1_n.c"
    "../external/mpir/mpn/generic/add_err2_n.c"
    "../external/mpir/mpn/generic/add_n.c"
    "../external/mpir/mpn/generic/addadd_n.c"
    "../external/mpir/mpn/generic/addmul_1.c"
    "../external/mpir/mpn/generic/addsub_n.c"
    "../external/mpir/mpn/generic/and_n.c"
    "../external/mpir/mpn/generic/andn_n.c"
    "../external/mpir/mpn/generic/bdivmod.c"
    "../external/mpir/mpn/generic/binvert.c"
    "../external/mpir/mpn/generic/cmp.c"
    "../external/mpir/mpn/generic/com_n.c"
    "../external/mpir/mpn/generic/comb_tables.c"
    "../external/mpir/mpn/generic/copyd.c"
    "../external/mpir/mpn/generic/copyi.c"
    "../external/mpir/mpn/generic/dc_bdiv_q.c"
    "../external/mpir/mpn/generic/dc_bdiv_q_n.c"
    "../external/mpir/mpn/generic/dc_bdiv_qr.c"
    "../external/mpir/mpn/generic/dc_bdiv_qr_n.c"
    "../external/mpir/mpn/generic/dc_div_q.c"
    "../external/mpir/mpn/generic/dc_div_qr.c"
    "../external/mpir/mpn/generic/dc_div_qr_n.c"
    "../external/mpir/mpn/generic/dc_divappr_q.c"
    "../external/mpir/mpn/generic/divexact.c"
    "../external/mpir/mpn/generic/divexact_1.c"
    "../external/mpir/mpn/generic/divexact_by3c.c"
    "../external/mpir/mpn/generic/divexact_byff.c"
    "../external/mpir/mpn/generic/divexact_byfobm1.c"
    "../external/mpir/mpn/generic/divisible_p.c"
    "../external/mpir/mpn/generic/divrem.c"
    "../external/mpir/mpn/generic/divrem_1.c"
    "../external/mpir/mpn/generic/divrem_2.c"
    "../external/mpir/mpn/generic/divrem_euclidean_qr_1.c"
    "../external/mpir/mpn/generic/divrem_euclidean_qr_2.c"
    "../external/mpir/mpn/generic/divrem_euclidean_r_1.c"
    "../external/mpir/mpn/generic/divrem_hensel_qr_1.c"
    "../external/mpir/mpn/generic/divrem_hensel_qr_1_1.c"
    "../external/mpir/mpn/generic/divrem_hensel_qr_1_2.c"
    "../external/mpir/mpn/generic/divrem_hensel_r_1.c"
    "../external/mpir/mpn/generic/divrem_hensel_rsh_qr_1.c"
    "../external/mpir/mpn/generic/dump.c"
    "../external/mpir/mpn/generic/fib2_ui.c"
    "../external/mpir/mpn/generic/fib_table.c"
    "../external/mpir/mpn/generic/gcd.c"
    "../external/mpir/mpn/generic/gcd_1.c"
    "../external/mpir/mpn/generic/gcd_subdiv_step.c"
    "../external/mpir/mpn/generic/gcdext.c"
    "../external/mpir/mpn/generic/gcdext_1.c"
    "../external/mpir/mpn/generic/gcdext_lehmer.c"
    "../external/mpir/mpn/generic/get_d.c"
    "../external/mpir/mpn/generic/get_str.c"
    "../external/mpir/mpn/generic/hamdist.c"
    "../external/mpir/mpn/generic/hgcd.c"
    "../external/mpir/mpn/generic/hgcd2.c"
    "../external/mpir/mpn/generic/hgcd2_jacobi.c"
    "../external/mpir/mpn/generic/hgcd_appr.c"
    "../external/mpir/mpn/generic/hgcd_jacobi.c"
    "../external/mpir/mpn/generic/hgcd_matrix.c"
    "../external/mpir/mpn/generic/hgcd_reduce.c"
    "../external/mpir/mpn/generic/hgcd_step.c"
    "../external/mpir/mpn/generic/inv_div_q.c"
    "../external/mpir/mpn/generic/inv_div_qr.c"
    "../external/mpir/mpn/generic/inv_div_qr_n.c"
    "../external/mpir/mpn/generic/inv_divappr_q.c"
    "../external/mpir/mpn/generic/inv_divappr_q_n.c"
    "../external/mpir/mpn/generic/invert.c"
    "../external/mpir/mpn/generic/ior_n.c"
    "../external/mpir/mpn/generic/iorn_n.c"
    "../external/mpir/mpn/generic/jacobi.c"
    "../external/mpir/mpn/generic/jacobi_2.c"
    "../external/mpir/mpn/generic/jacobi_base.c"
    "../external/mpir/mpn/generic/lshift.c"
    "../external/mpir/mpn/generic/matrix22_mul.c"
    "../external/mpir/mpn/generic/matrix22_mul1_inverse_vector.c"
    "../external/mpir/mpn/generic/mod_1.c"
    "../external/mpir/mpn/generic/mod_1_1.c"
    "../external/mpir/mpn/generic/mod_1_2.c"
    "../external/mpir/mpn/generic/mod_1_3.c"
    "../external/mpir/mpn/generic/mod_34lsub1.c"
    "../external/mpir/mpn/generic/modexact_1c_odd.c"
    "../external/mpir/mpn/generic/mp_bases.c"
    "../external/mpir/mpn/generic/mul.c"
    "../external/mpir/mpn/generic/mul_1.c"
    "../external/mpir/mpn/generic/mul_basecase.c"
    "../external/mpir/mpn/generic/mul_fft.c"
    "../external/mpir/mpn/generic/mul_n.c"
    "../external/mpir/mpn/generic/mulhigh_n.c"
    "../external/mpir/mpn/generic/mullow_basecase.c"
    "../external/mpir/mpn/generic/mullow_n.c"
    "../external/mpir/mpn/generic/mullow_n_basecase.c"
    "../external/mpir/mpn/generic/mulmid.c"
    "../external/mpir/mpn/generic/mulmid_basecase.c"
    "../external/mpir/mpn/generic/mulmid_n.c"
    "../external/mpir/mpn/generic/mulmod_2expm1.c"
    "../external/mpir/mpn/generic/mulmod_2expp1_basecase.c"
    "../external/mpir/mpn/generic/mulmod_bexpp1.c"
    "../external/mpir/mpn/generic/nand_n.c"
    "../external/mpir/mpn/generic/neg_n.c"
    "../external/mpir/mpn/generic/nior_n.c"
    "../external/mpir/mpn/generic/nsumdiff_n.c"
    "../external/mpir/mpn/generic/perfect_square_p.c"
    "../external/mpir/mpn/generic/popcount.c"
    "../external/mpir/mpn/generic/pow_1.c"
    "../external/mpir/mpn/generic/powlo.c"
    "../external/mpir/mpn/generic/powm.c"
    "../external/mpir/mpn/generic/preinv_divrem_1.c"
    "../external/mpir/mpn/generic/preinv_mod_1.c"
    "../external/mpir/mpn/generic/random.c"
    "../external/mpir/mpn/generic/random2.c"
    "../external/mpir/mpn/generic/randomb.c"
    "../external/mpir/mpn/generic/redc_1.c"
    "../external/mpir/mpn/generic/redc_2.c"
    "../external/mpir/mpn/generic/redc_n.c"
    "../external/mpir/mpn/generic/rootrem.c"
    "../external/mpir/mpn/generic/rootrem_basecase.c"
    "../external/mpir/mpn/generic/rrandom.c"
    "../external/mpir/mpn/generic/rsh_divrem_hensel_qr_1.c"
    "../external/mpir/mpn/generic/rsh_divrem_hensel_qr_1_1.c"
    "../external/mpir/mpn/generic/rsh_divrem_hensel_qr_1_2.c"
    "../external/mpir/mpn/generic/rshift.c"
    "../external/mpir/mpn/generic/sb_bdiv_q.c"
    "../external/mpir/mpn/generic/sb_bdiv_qr.c"
    "../external/mpir/mpn/generic/sb_div_q.c"
    "../external/mpir/mpn/generic/sb_div_qr.c"
    "../external/mpir/mpn/generic/sb_divappr_q.c"
    "../external/mpir/mpn/generic/scan0.c"
    "../external/mpir/mpn/generic/scan1.c"
    "../external/mpir/mpn/generic/set_str.c"
    "../external/mpir/mpn/generic/sizeinbase.c"
    "../external/mpir/mpn/generic/sqr_basecase.c"
    "../external/mpir/mpn/generic/sqrtrem.c"
    "../external/mpir/mpn/generic/sub.c"
    "../external/mpir/mpn/generic/sub_1.c"
    "../external/mpir/mpn/generic/sub_err1_n.c"
    "../external/mpir/mpn/generic/sub_err2_n.c"
    "../external/mpir/mpn/generic/sub_n.c"
    "../external/mpir/mpn/generic/subadd_n.c"
    "../external/mpir/mpn/generic/submul_1.c"
    "../external/mpir/mpn/generic/sumdiff_n.c"
    "../external/mpir/mpn/generic/tdiv_q.c"
    "../external/mpir/mpn/generic/tdiv_qr.c"
    "../external/mpir/mpn/generic/toom3_mul.c"
    "../external/mpir/mpn/generic/toom3_mul_n.c"
    "../external/mpir/mpn/generic/toom42_mulmid.c"
    "../external/mpir/mpn/generic/toom4_mul.c"
    "../external/mpir/mpn/generic/toom4_mul_n.c"
    "../external/mpir/mpn/generic/toom8_sqr_n.c"
    "../external/mpir/mpn/generic/toom8h_mul.c"
    "../external/mpir/mpn/generic/toom_couple_handling.c"
    "../external/mpir/mpn/generic/toom_eval_dgr3_pm1.c"
    "../external/mpir/mpn/generic/toom_eval_dgr3_pm2.c"
    "../external/mpir/mpn/generic/toom_eval_pm1.c"
    "../external/mpir/mpn/generic/toom_eval_pm2.c"
    "../external/mpir/mpn/generic/toom_eval_pm2exp.c"
    "../external/mpir/mpn/generic/toom_eval_pm2rexp.c"
    "../external/mpir/mpn/generic/toom_interpolate_16pts.c"
    "../external/mpir/mpn/generic/urandomb.c"
    "../external/mpir/mpn/generic/urandomm.c"
    "../external/mpir/mpn/generic/xnor_n.c"
    "../external/mpir/mpn/generic/xor_n.c"
    "../external/mpir/mpn/generic/zero.c"
    "../external/mpir/mpn/generic/zero_p.c"
)
source_group("Source Files\\mpn" FILES ${Source_Files__mpn})

set(Source_Files__mpq
    "../external/mpir/mpq/abs.c"
    "../external/mpir/mpq/aors.c"
    "../external/mpir/mpq/canonicalize.c"
    "../external/mpir/mpq/clear.c"
    "../external/mpir/mpq/clears.c"
    "../external/mpir/mpq/cmp.c"
    "../external/mpir/mpq/cmp_si.c"
    "../external/mpir/mpq/cmp_ui.c"
    "../external/mpir/mpq/div.c"
    "../external/mpir/mpq/equal.c"
    "../external/mpir/mpq/get_d.c"
    "../external/mpir/mpq/get_den.c"
    "../external/mpir/mpq/get_num.c"
    "../external/mpir/mpq/get_str.c"
    "../external/mpir/mpq/init.c"
    "../external/mpir/mpq/inits.c"
    "../external/mpir/mpq/inp_str.c"
    "../external/mpir/mpq/inv.c"
    "../external/mpir/mpq/md_2exp.c"
    "../external/mpir/mpq/mul.c"
    "../external/mpir/mpq/neg.c"
    "../external/mpir/mpq/out_str.c"
    "../external/mpir/mpq/set.c"
    "../external/mpir/mpq/set_d.c"
    "../external/mpir/mpq/set_den.c"
    "../external/mpir/mpq/set_f.c"
    "../external/mpir/mpq/set_num.c"
    "../external/mpir/mpq/set_si.c"
    "../external/mpir/mpq/set_str.c"
    "../external/mpir/mpq/set_ui.c"
    "../external/mpir/mpq/set_z.c"
    "../external/mpir/mpq/swap.c"
)
source_group("Source Files\\mpq" FILES ${Source_Files__mpq})

set(Source_Files__mpz
    "../external/mpir/mpz/2fac_ui.c"
    "../external/mpir/mpz/abs.c"
    "../external/mpir/mpz/add.c"
    "../external/mpir/mpz/add_ui.c"
    "../external/mpir/mpz/and.c"
    "../external/mpir/mpz/aorsmul.c"
    "../external/mpir/mpz/aorsmul_i.c"
    "../external/mpir/mpz/array_init.c"
    "../external/mpir/mpz/bin_ui.c"
    "../external/mpir/mpz/bin_uiui.c"
    "../external/mpir/mpz/cdiv_q.c"
    "../external/mpir/mpz/cdiv_q_ui.c"
    "../external/mpir/mpz/cdiv_qr.c"
    "../external/mpir/mpz/cdiv_qr_ui.c"
    "../external/mpir/mpz/cdiv_r.c"
    "../external/mpir/mpz/cdiv_r_ui.c"
    "../external/mpir/mpz/cdiv_ui.c"
    "../external/mpir/mpz/cfdiv_q_2exp.c"
    "../external/mpir/mpz/cfdiv_r_2exp.c"
    "../external/mpir/mpz/clear.c"
    "../external/mpir/mpz/clears.c"
    "../external/mpir/mpz/clrbit.c"
    "../external/mpir/mpz/cmp.c"
    "../external/mpir/mpz/cmp_d.c"
    "../external/mpir/mpz/cmp_si.c"
    "../external/mpir/mpz/cmp_ui.c"
    "../external/mpir/mpz/cmpabs.c"
    "../external/mpir/mpz/cmpabs_d.c"
    "../external/mpir/mpz/cmpabs_ui.c"
    "../external/mpir/mpz/com.c"
    "../external/mpir/mpz/combit.c"
    "../external/mpir/mpz/cong.c"
    "../external/mpir/mpz/cong_2exp.c"
    "../external/mpir/mpz/cong_ui.c"
    "../external/mpir/mpz/dive_ui.c"
    "../external/mpir/mpz/divegcd.c"
    "../external/mpir/mpz/divexact.c"
    "../external/mpir/mpz/divis.c"
    "../external/mpir/mpz/divis_2exp.c"
    "../external/mpir/mpz/divis_ui.c"
    "../external/mpir/mpz/dump.c"
    "../external/mpir/mpz/export.c"
    "../external/mpir/mpz/fac_ui.c"
    "../external/mpir/mpz/fdiv_q.c"
    "../external/mpir/mpz/fdiv_q_ui.c"
    "../external/mpir/mpz/fdiv_qr.c"
    "../external/mpir/mpz/fdiv_qr_ui.c"
    "../external/mpir/mpz/fdiv_r.c"
    "../external/mpir/mpz/fdiv_r_ui.c"
    "../external/mpir/mpz/fdiv_ui.c"
    "../external/mpir/mpz/fib2_ui.c"
    "../external/mpir/mpz/fib_ui.c"
    "../external/mpir/mpz/fits_si.c"
    "../external/mpir/mpz/fits_sint.c"
    "../external/mpir/mpz/fits_slong.c"
    "../external/mpir/mpz/fits_sshort.c"
    "../external/mpir/mpz/fits_ui.c"
    "../external/mpir/mpz/fits_uint.c"
    "../external/mpir/mpz/fits_ulong.c"
    "../external/mpir/mpz/fits_ushort.c"
    "../external/mpir/mpz/gcd.c"
    "../external/mpir/mpz/gcd_ui.c"
    "../external/mpir/mpz/gcdext.c"
    "../external/mpir/mpz/get_d.c"
    "../external/mpir/mpz/get_d_2exp.c"
    "../external/mpir/mpz/get_si.c"
    "../external/mpir/mpz/get_str.c"
    "../external/mpir/mpz/get_sx.c"
    "../external/mpir/mpz/get_ui.c"
    "../external/mpir/mpz/get_ux.c"
    "../external/mpir/mpz/getlimbn.c"
    "../external/mpir/mpz/hamdist.c"
    "../external/mpir/mpz/import.c"
    "../external/mpir/mpz/init.c"
    "../external/mpir/mpz/init2.c"
    "../external/mpir/mpz/inits.c"
    "../external/mpir/mpz/inp_raw.c"
    "../external/mpir/mpz/inp_str.c"
    "../external/mpir/mpz/invert.c"
    "../external/mpir/mpz/ior.c"
    "../external/mpir/mpz/iset.c"
    "../external/mpir/mpz/iset_d.c"
    "../external/mpir/mpz/iset_si.c"
    "../external/mpir/mpz/iset_str.c"
    "../external/mpir/mpz/iset_sx.c"
    "../external/mpir/mpz/iset_ui.c"
    "../external/mpir/mpz/iset_ux.c"
    "../external/mpir/mpz/jacobi.c"
    "../external/mpir/mpz/kronsz.c"
    "../external/mpir/mpz/kronuz.c"
    "../external/mpir/mpz/kronzs.c"
    "../external/mpir/mpz/kronzu.c"
    "../external/mpir/mpz/lcm.c"
    "../external/mpir/mpz/lcm_ui.c"
    "../external/mpir/mpz/likely_prime_p.c"
    "../external/mpir/mpz/limbs_finish.c"
    "../external/mpir/mpz/limbs_modify.c"
    "../external/mpir/mpz/limbs_read.c"
    "../external/mpir/mpz/limbs_write.c"
    "../external/mpir/mpz/lucnum2_ui.c"
    "../external/mpir/mpz/lucnum_ui.c"
    "../external/mpir/mpz/mfac_uiui.c"
    "../external/mpir/mpz/miller_rabin.c"
    "../external/mpir/mpz/millerrabin.c"
    "../external/mpir/mpz/mod.c"
    "../external/mpir/mpz/mul.c"
    "../external/mpir/mpz/mul_2exp.c"
    "../external/mpir/mpz/mul_si.c"
    "../external/mpir/mpz/mul_ui.c"
    "../external/mpir/mpz/n_pow_ui.c"
    "../external/mpir/mpz/neg.c"
    "../external/mpir/mpz/next_prime_candidate.c"
    "../external/mpir/mpz/nextprime.c"
    "../external/mpir/mpz/nthroot.c"
    "../external/mpir/mpz/oddfac_1.c"
    "../external/mpir/mpz/out_raw.c"
    "../external/mpir/mpz/out_str.c"
    "../external/mpir/mpz/perfpow.c"
    "../external/mpir/mpz/perfsqr.c"
    "../external/mpir/mpz/popcount.c"
    "../external/mpir/mpz/pow_ui.c"
    "../external/mpir/mpz/powm.c"
    "../external/mpir/mpz/powm_ui.c"
    "../external/mpir/mpz/pprime_p.c"
    "../external/mpir/mpz/primorial_ui.c"
    "../external/mpir/mpz/probable_prime_p.c"
    "../external/mpir/mpz/prodlimbs.c"
    "../external/mpir/mpz/realloc.c"
    "../external/mpir/mpz/realloc2.c"
    "../external/mpir/mpz/remove.c"
    "../external/mpir/mpz/roinit_n.c"
    "../external/mpir/mpz/root.c"
    "../external/mpir/mpz/rootrem.c"
    "../external/mpir/mpz/rrandomb.c"
    "../external/mpir/mpz/scan0.c"
    "../external/mpir/mpz/scan1.c"
    "../external/mpir/mpz/set.c"
    "../external/mpir/mpz/set_d.c"
    "../external/mpir/mpz/set_f.c"
    "../external/mpir/mpz/set_q.c"
    "../external/mpir/mpz/set_si.c"
    "../external/mpir/mpz/set_str.c"
    "../external/mpir/mpz/set_sx.c"
    "../external/mpir/mpz/set_ui.c"
    "../external/mpir/mpz/set_ux.c"
    "../external/mpir/mpz/setbit.c"
    "../external/mpir/mpz/size.c"
    "../external/mpir/mpz/sizeinbase.c"
    "../external/mpir/mpz/sqrt.c"
    "../external/mpir/mpz/sqrtrem.c"
    "../external/mpir/mpz/sub.c"
    "../external/mpir/mpz/sub_ui.c"
    "../external/mpir/mpz/swap.c"
    "../external/mpir/mpz/tdiv_q.c"
    "../external/mpir/mpz/tdiv_q_2exp.c"
    "../external/mpir/mpz/tdiv_q_ui.c"
    "../external/mpir/mpz/tdiv_qr.c"
    "../external/mpir/mpz/tdiv_qr_ui.c"
    "../external/mpir/mpz/tdiv_r.c"
    "../external/mpir/mpz/tdiv_r_2exp.c"
    "../external/mpir/mpz/tdiv_r_ui.c"
    "../external/mpir/mpz/tdiv_ui.c"
    "../external/mpir/mpz/trial_division.c"
    "../external/mpir/mpz/tstbit.c"
    "../external/mpir/mpz/ui_pow_ui.c"
    "../external/mpir/mpz/ui_sub.c"
    "../external/mpir/mpz/urandomb.c"
    "../external/mpir/mpz/urandomm.c"
    "../external/mpir/mpz/xor.c"
)
source_group("Source Files\\mpz" FILES ${Source_Files__mpz})

set(Source_Files__printf
    "../external/mpir/printf/asprintf.c"
    "../external/mpir/printf/asprntffuns.c"
    "../external/mpir/printf/doprnt.c"
    "../external/mpir/printf/doprntf.c"
    "../external/mpir/printf/doprnti.c"
    "../external/mpir/printf/fprintf.c"
    "../external/mpir/printf/obprintf.c"
    "../external/mpir/printf/obprntffuns.c"
    "../external/mpir/printf/obvprintf.c"
    "../external/mpir/printf/printf.c"
    "../external/mpir/printf/printffuns.c"
    "../external/mpir/printf/repl-vsnprintf.c"
    "../external/mpir/printf/snprintf.c"
    "../external/mpir/printf/snprntffuns.c"
    "../external/mpir/printf/sprintf.c"
    "../external/mpir/printf/sprintffuns.c"
    "../external/mpir/printf/vasprintf.c"
    "../external/mpir/printf/vfprintf.c"
    "../external/mpir/printf/vprintf.c"
    "../external/mpir/printf/vsnprintf.c"
    "../external/mpir/printf/vsprintf.c"
)
source_group("Source Files\\printf" FILES ${Source_Files__printf})

set(Source_Files__scanf
    "../external/mpir/scanf/doscan.c"
    "../external/mpir/scanf/fscanf.c"
    "../external/mpir/scanf/fscanffuns.c"
    "../external/mpir/scanf/scanf.c"
    "../external/mpir/scanf/sscanf.c"
    "../external/mpir/scanf/sscanffuns.c"
    "../external/mpir/scanf/vfscanf.c"
    "../external/mpir/scanf/vscanf.c"
    "../external/mpir/scanf/vsscanf.c"
)
source_group("Source Files\\scanf" FILES ${Source_Files__scanf})


set(ALL_FILES
    ${no_group_source_files}
    ${Header_Files}
    ${Source_Files}
    ${Source_Files__cxx}
    ${Source_Files__fft}
    ${Source_Files__mpf}
    ${Source_Files__mpn}
    ${Source_Files__mpq}
    ${Source_Files__mpz}
    ${Source_Files__printf}
    ${Source_Files__scanf}
)

add_definitions("-DMSC_BUILD_DLL -DHAVE_CONFIG_H -DWIN32 -DWIN32 -D_WIN64")

configure_file(gmp-h-msvc.in mpir.h @ONLY)
configure_file(longlong.in.h longlong.h)
configure_file(../external/mpir/mpirxx.h mpirxx.h)
configure_file(../external/mpir/mpirxx.h gmpxx.h)
configure_file(cfg.h cfg.h)
configure_file(gmp-h-msvc.in gmp.h @ONLY)

if(BUILD_PYTHON)
    add_library(mpir_static STATIC ${ALL_FILES})
elseif()
add_library(mpir STATIC ${ALL_FILES})
endif(BUILD_PYTHON)

#add_library(mpir SHARED ${ALL_FILES})

install(TARGETS mpir DESTINATION lib)
install(TARGETS mpir DESTINATION bin)
install(FILES "${PROJECT_BINARY_DIR}/mpir/mpir.h" "${PROJECT_BINARY_DIR}/mpir/gmp.h" "${PROJECT_BINARY_DIR}/mpir/gmpxx.h" "${PROJECT_BINARY_DIR}/mpir/mpirxx.h"
  DESTINATION include
  )

add_custom_target(
    myCustomTarget
    COMMAND cmd "cd //C${CMAKE_SOURCE_DIR}\\msvc\\ && prebuild.bat gc /win32 /19"
    COMMENT "generating build date header"
    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
)


